2013-11-28  Richard Biener  <rguenther@suse.de>

PR lto/59323
	* lto-streamer-out.c (tree_is_indexable): TYPE_DECLs and
	CONST_DECLs in function context are not indexable.

	* gcc.dg/lto/pr59323_0.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@205481 138bc75d-0d04-0410-961f-82ee72b054a4